objects/CSS_WS_Rescue__c.object
<CustomObject>
    <description>Main rescues object</description>
    <fields>
        <fullName>CSS_WS_AccCoverage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CSS WS AccCoverage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Access_Code__c</fullName>
        <label>Access Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_AdditionalHoursAmount__c</fullName>
        <label>Additional Hours Amount ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CSS_WS_AdditionalHours__c</fullName>
        <label>Additional Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_AdditionalKMDrivenAmount__c</fullName>
        <label>Additional KM Driven Amount ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CSS_WS_AdditionalKmDriven__c</fullName>
        <label>Additional KM Driven</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Application__c</fullName>
        <label>Application</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Approved_Rejected_Date__c</fullName>
        <label>Approved/Rejected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Authorizer__c</fullName>
        <description>Who authorizes Crane</description>
        <label>Authorized by</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Care</fullName>
                </value>
                <value>
                    <fullName>Planta</fullName>
                </value>
                <value>
                    <fullName>DR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSS_WS_Automotive_Application_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Automotive Application Flag</description>
        <label>Automotive Application Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSS_WS_BaseFare__c</fullName>
        <label>Base Fare</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Night</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSS_WS_Before_In_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BIS Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Brand__c</fullName>
        <label>Brand</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Build_Date__c</fullName>
        <description>Engine Building Date</description>
        <label>Engine Built Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSS_WS_CPL__c</fullName>
        <label>CPL</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_CaptureCode__c</fullName>
        <label>Capture Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Capturer_Name__c</fullName>
        <label>Capturer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Charged_To__c</fullName>
        <label>Charged To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Planta Automotriz</fullName>
                </value>
                <value>
                    <fullName>Planta Fuera de Carretera</fullName>
                </value>
                <value>
                    <fullName>Cliente</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSS_WS_Claim_Service_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim Service Order</label>
        <referenceTo>CSS_WS_Warranty__c</referenceTo>
        <relationshipLabel>CSS WS Rescues (Claim Service Order)</relationshipLabel>
        <relationshipName>CSS_WS_Claim_Service_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSS_WS_ClientName__c</fullName>
        <label>Client Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Color__c</fullName>
        <label>Color</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Component__c</fullName>
        <label>Component</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_CoordinatedBy__c</fullName>
        <label>Coordinated by</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Care</fullName>
                </value>
                <value>
                    <fullName>L-800 INTERNATIONAL</fullName>
                </value>
                <value>
                    <fullName>L-800 KENWORTH</fullName>
                </value>
                <value>
                    <fullName>L-800 VOLVO</fullName>
                </value>
                <value>
                    <fullName>L-800 MB</fullName>
                </value>
                <value>
                    <fullName>L-800 VW</fullName>
                </value>
                <value>
                    <fullName>DR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSS_WS_CoveredTravelLabor__c</fullName>
        <label>CSS WS CoveredTravelLabor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_CraneAuthorization__c</fullName>
        <label>Crane Authorization ($)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Crane_Justification__c</fullName>
        <label>Crane Justification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Customer_Name_Internal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Customer</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CSS WS Rescues</relationshipLabel>
        <relationshipName>CSS_WS_Rescues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Date_AuthorizeOrReject__c</fullName>
        <description>This value will be the date in which Planta authorizes or rejects the document created. </description>
        <label>Date Authorize or Reject</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Date_Dealer_Days__c</fullName>
        <formula>CSS_WS_Date_Dealer__c - CSS_WS_InsertDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Dealer Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Date_Dealer__c</fullName>
        <description>This value will be the date in which the dealer creates the document. </description>
        <label>Date Dealer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Date_Rev_Plant__c</fullName>
        <description>This value will be the date in which Planta receives the document created by the dealer for review. </description>
        <label>Factory Date Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSS_WS_DeadTime__c</fullName>
        <label>Dead Time (Hrs)</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_EconomicNumber__c</fullName>
        <label>Economic Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Engine_Application_Code__c</fullName>
        <description>Engine Application Code</description>
        <label>Engine Application Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Engine_Application__c</fullName>
        <label>Engine Application</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Engine_Bill_to_Code__c</fullName>
        <label>Engine Bill to Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Engine_Family_Code__c</fullName>
        <label>Engine Family Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Engine_Serial_Number__c</fullName>
        <label>Engine Serial No.</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Engine_System__c</fullName>
        <label>Engine System</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Engine_Trade_Out_conversion_date__c</fullName>
        <label>Engine Trade Out Conversion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Equipment_Code__c</fullName>
        <label>Equipment Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Exit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSS_WS_ExpertOutPut__c</fullName>
        <description>Expert goes on road to do repairing</description>
        <label>Technician Exit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Factory_Date_Review_Days__c</fullName>
        <formula>CSS_WS_Date_Rev_Plant__c - CSS_WS_Date_Dealer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Factory Date Review Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_FailureDate__c</fullName>
        <label>Failure Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSS_WS_FailureIsProductProblem__c</fullName>
        <label>Failure is Product Problem?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSS_WS_FailurePlace__c</fullName>
        <label>Failure Place</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_FailureRelatedTo__c</fullName>
        <label>Failure related with</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Catalog_Fails</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSS_WS_Failure_Measure__c</fullName>
        <label>Failure Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Km</fullName>
                </value>
                <value>
                    <fullName>Hr</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSS_WS_Failure_Mode__c</fullName>
        <label>Failure Mode</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Failure_Point_Quantity__c</fullName>
        <label>Failure Point Qty</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_InsertDate__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Lodging_Amount_MXN__c</fullName>
        <description>Lodging amount in MXN</description>
        <label>Lodging Amount MXN ($)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Lodging_Amount__c</fullName>
        <label>Lodging Amount ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_LunchAmount_MXN__c</fullName>
        <description>Total lunch spend in MXN pesos</description>
        <label>Lunch Amount MXN ($)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CSS_WS_LunchAmount__c</fullName>
        <description>Lunch Amount cost in USD</description>
        <label>Lunch Amount ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Marine_Application_Flag__c</fullName>
        <label>Marine Application Flag</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_MinimumFare__c</fullName>
        <label>Minimum Fare ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Model_Series__c</fullName>
        <label>Model Series</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Model__c</fullName>
        <label>Model</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_MotorBrand__c</fullName>
        <label>Motor Brand</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_MotorKilometers__c</fullName>
        <label>Motor Kilometers</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_MotorModel__c</fullName>
        <label>Motor Model</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Motor_Built_Date__c</fullName>
        <label>Motor Built Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSS_WS_OtherObservation__c</fullName>
        <label>Other Observation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CSS_WS_OtherSituation__c</fullName>
        <label>Additional Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Plate__c</fullName>
        <label>Plate</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Product_Application_Code__c</fullName>
        <label>Product Application Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Product_Application_Description__c</fullName>
        <description>Product Application Description</description>
        <label>Product Application Description</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_ReasonNoTargetTime__c</fullName>
        <label>Reasons not to hit target time (7 Hrs)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CSS_WS_No_attention_reasons_picklist</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSS_WS_RepairEnding__c</fullName>
        <label>Service Completion</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSS_WS_RepairTime__c</fullName>
        <label>Repair Time</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Repair__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Repair</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSS_WS_ReplacementReasonPicklist__c</fullName>
        <label>Replacement Reason Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Root Cause</fullName>
                </value>
                <value>
                    <fullName>Service Publication</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSS_WS_ReportedFailure__c</fullName>
        <label>Reported Failure</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CSS_WS_RescueCost__c</fullName>
        <label>Rescue Cost ($)</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CSS_WS_RescueIdClaim__c</fullName>
        <label>Rescue Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_RescueStatus__c</fullName>
        <label>Rescue Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Pending Planta Review</fullName>
                </value>
                <value>
                    <fullName>Authorized by Planta</fullName>
                </value>
                <value>
                    <fullName>Rejected by Planta</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                    <isActive>false</isActive>
                    <label>Approved</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                    <isActive>false</isActive>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                    <isActive>false</isActive>
                    <label>Rejected</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSS_WS_Responsable__c</fullName>
        <label>Responsable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cliente</fullName>
                </value>
                <value>
                    <fullName>DR</fullName>
                </value>
                <value>
                    <fullName>Planta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSS_WS_ResponseExitTime__c</fullName>
        <label>Response Time</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Returns__c</fullName>
        <label>Laps</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_RoadSection__c</fullName>
        <label>Road Section</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_ServiceCoordination__c</fullName>
        <label>Service Coordination</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSS_WS_ServiceRequest__c</fullName>
        <label>Service Request</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Service_Model__c</fullName>
        <label>Service Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Service_Provider_DR__c</fullName>
        <label>Service Provider (DR)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Service_Provider_Dealer__c</fullName>
        <label>Service Provider (Dealer)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Service_Provider_Name_DR__c</fullName>
        <label>Service Provider Name (DR)</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Service_Provider_Name_Dealer__c</fullName>
        <label>Service Provider Name (Dealer)</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_SignalBy__c</fullName>
        <label>Initial Fare by</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Warranty</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Policy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSS_WS_SignalCalculatedby__c</fullName>
        <label>Signal calculated by</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_SignalTime__c</fullName>
        <label>Signal Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Day</fullName>
                    <default>true</default>
                    <label>Day</label>
                </value>
                <value>
                    <fullName>Night</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSS_WS_SparePartsUsage__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Spare Parts Usage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSS_WS_SpendJustification__c</fullName>
        <description>travel &amp; extras justification</description>
        <label>Spend Justification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CSS_WS_TechnicalCause__c</fullName>
        <label>Technical Cause</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CSS_WS_TechnicianName__c</fullName>
        <label>Technician Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_TechnicianPromotion__c</fullName>
        <label>Technician Promotion</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CSS_WS_TecnhicalCorrection__c</fullName>
        <label>Technical Correction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CSS_WS_TotalLunchTime__c</fullName>
        <label>Total Lunch Time</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_TotalRescueTime__c</fullName>
        <label>Total Rescue Time</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_TowingAmount__c</fullName>
        <label>Towing Amount ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Towing_Amount_MXN__c</fullName>
        <label>Towing Amount MXN ($)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CSS_WS_TravelHoursRoundTripPolicy__c</fullName>
        <label>Travel Hours (Approved)</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_TravelHoursRoundTrip__c</fullName>
        <label>Travel Hours (Requested)</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_TravelHours__c</fullName>
        <label>Travel Hours</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_TravelKmRoundTripPolicy__c</fullName>
        <label>Travel Distance (Approved)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_TravelKmRoundTrip__c</fullName>
        <label>Travel Distance (Requested)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Vin__c</fullName>
        <label>Vin</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_WarrantyCoverageKm__c</fullName>
        <label>Warranty Coverage (KM)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_WarrantyCoverageYears__c</fullName>
        <label>Warranty Coverage (Years)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Warranty_Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A field for relating rescues with claims for travel section of Claim form</description>
        <label>CSS WS Claim</label>
        <referenceTo>CSS_WS_Warranty__c</referenceTo>
        <relationshipLabel>CSS WS Rescues</relationshipLabel>
        <relationshipName>CSS_WS_Rescues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Warranty_Start_Date__c</fullName>
        <label>Warranty Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSS_WS_YearModel__c</fullName>
        <label>Year Model</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Years_In_Service__c</fullName>
        <label>Years in Service</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Clone__c</fullName>
        <label>Is a clone</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Labor_Rate__c</fullName>
        <label>Labor Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeaveShopTime__c</fullName>
        <description>Date time that Unit leaves shop after repairing</description>
        <label>Leave Shop Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Towing_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Towing Flag authorized ?</description>
        <label>Towing Flag</label>
        <type>Checkbox</type>
    </fields>
    <label>CSS WS Rescue</label>
    <listViews>
        <fullName>CSS_WS_Queue_CSM_CSS_WS_Rescue</fullName>
        <filterScope>Queue</filterScope>
        <label>Queue CSM</label>
        <queue>CSS_WS_Queue_CSM</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSS_WS_Queue_Factory_CSS_WS_Rescue</fullName>
        <filterScope>Queue</filterScope>
        <label>Queue Factory</label>
        <queue>CSS_WS_Queue_Factory</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>my_rescues</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>My Rescues</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RES{0000000}</displayFormat>
        <label>Folio</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CSS WS Rescues</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>